--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .app {
   width:  100%;
   height: 100vh;
-  padding: 100px 100px;
+  padding: 100px;
   box-sizing: border-box;
   display: flex;
   gap: 20px;
   flex-direction: column;
   align-items: center;
+}
+
+@media  screen and (max-width: 600px) {
+  .app{
+    padding: 100px 20px;
+  }
 }
