--- a/src/components/userInfo/UserInfo.module.scss
+++ b/src/components/userInfo/UserInfo.module.scss
@@ -22,6 +22,12 @@
         display: inline-block;
         width: 30%;
         padding-left: 100px;
+
+        @media screen and (max-width: 780px) {
+          padding-left: 10px;
+          width: fit-content;
+          margin-right: 5px;
+        }
       }
     }
 
